--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         .body {
             height: 100dvh;
         }
+
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
     </style>
 </head>
 
